# runogeneraattori

./: .coveragerc  .gitignore  .pylintrc  README.md  nltk_riippuvuudet.py  pyproject.toml  tasks.py
.github/workflows/: lint.yml  main.yml
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: main.py  markov_ketju.py  runogeneroija.py  tokenoija.py  trie.py
src/testit/: markov_ketju_test.py  runogeneroija_test.py  tokenoija_test.py  trie_test.py
