[tool.poetry]
name = "runogeneraattori"
version = "0.1.0"
description = ""
authors = ["Sampo Riitala <57003465+realtalin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
