[tool.poetry]
name = "runogeneraattori"
version = "0.1.0"
description = ""
authors = ["Sampo Riitala <57003465+realtalin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.8.1"
pytest = "^7.4.2"
coverage = "^7.3.1"
pylint = "^2.17.5"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
